Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-    
   <head>
   </head>
- 
   <body>
-    Hello World
+    <div id="profile-container">
+        <img id="profile-container" src="images/tsalasah.JPG" alt="profile image" />
+        <h2 id="profile-name">Nur Tsalasah</h2>
+     </div>
   </body>
- 
 </html>
