--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="profile-container">
+    <div id="header">Header</div>
         <img id="profile-container" src="images/tsalasah.JPG" alt="profile image" />
         <h2 id="profile-name">Nur Tsalasah</h2>
      </div>
