--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="header">Header</div>
+    <div id="profile-container">
         <img id="profile-container" src="images/tsalasah.JPG" alt="profile image" />
         <h2 id="profile-name">Nur Tsalasah</h2>
      </div>
