added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <img id="profile-container" src="images/tsalasah.JPG" alt="profile image" />
         <h2 id="profile-name">Nur Tsalasah</h2>
      </div>
+     <div id="footer">Footer</div>
   </body>
 </html>
